# osg-specialWindows

./: .gitignore  CMakeLists.txt  nofixfunction
CMakeModules/: FindJPEG.cmake
applications/osgviewer/: CMakeLists.txt  osgviewer.cpp
include/osg/: State  Texture
src/osg/: DisplaySettings.cpp  Geometry.cpp  GraphicsContext.cpp  Program.cpp  State.cpp  Texture.cpp  Texture2D.cpp
src/osgPlugins/OpenFLight/: CMakeLists.txt  ControlRecords.cpp  ConvertToVertexAttributeArrays.h  Document.cpp  Document.h  EtxendedMaterialRecord.cpp  GLCode.cpp  GeometryRecords.cpp  PaletteRecords.cpp  frag.glsl  vert.glsl
src/osgPlugins/OpenFLight/NV/: NvAssetLoader.h  NvGLSLProgram.cpp  NvGLSLProgram.h  NvLogs.h  NvPlatformGL.h  NvStopWatch.h  NvTimers.cpp
src/osgPlugins/OpenFLight/assets/shaders/: frag.glsl  transparent.glsl
src/osgPlugins/OpenFlight/: ActiveUniforms.cpp  ActiveUniforms.h  AncillaryRecords.cpp  CMakeLists.txt  ControlRecords.cpp  ConvertToVertexAttributeArrays.h  ExtendedMaterial.h  ExtendedMaterial.h.orig  ExtendedMaterialRecord.cpp  ExtendedMaterialRecord.cpp.orig  FltExportVisitor.cpp  GLCode.cpp  GLCode.h  GeometryRecords.cpp  GeometryRecords.cpp.orig  ModelShaderFrag.glsl  NuGeometry.h  Opcodes.h  PaletteRecords.cpp  Pools.h  PrimaryRecords.cpp  ReaderWriterFLT.cpp  Record.cpp  Record.h  VertexPaletteManager.cpp  VertexPaletteManager.h  transparent.glsl
src/osgPlugins/OpenFlight/NV/: NvAssetLoader.cpp  NvGfxAPI.h  NvTimers.h
src/osgPlugins/OpenFlight/assets/shaders/: SAVE_transparent.glsl  frag.glsl  orig-frag.glsl  vert.glsl
src/osgViewer/: GraphicsWindowWin32.cpp  Viewer.cpp
